--- a/html/Front.html
+++ b/html/Front.html
@@ -9,7 +9,7 @@
     <meta name="keywords"  lang ="en-us"  content="events, event, app, level-up, andela">
     <meta name="author" content="Mutesasira Moses">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scale-scalable=0">
-    <meta http-equiv ="X-UA-Compatible" content = "IE-edge, chrome = 1" >
+    <!-- <meta http-equiv ="X-UA-Compatible" content = "IE-edge, chrome = 1" > -->
     <meta  name = "handheldfriendly" content = "true">
   </head>
   <body>
@@ -34,8 +34,7 @@
 
       <div  id = "form">
       <form method = "POST">
-          <fieldset id = "field">
-              <legend>Login</legend>
+                 <p>Login</p>
           <div>
               <div class="input">
                  <span> First name:</span>
@@ -56,7 +55,7 @@
               <input class="inputbutton4"  type = "submit" value = "submit"/>
             </div>
           </div>
-        </fieldset>
+        
       </form>
     </div>
 
