--- a/html/Front.html
+++ b/html/Front.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>index</title>
+    <title>Events App</title>
     <link rel="stylesheet" href="../css/front.css">
     
     <meta charset="UTF-8"> 
@@ -23,7 +23,7 @@
 
       <div  id = "left">
           <div>
-         <img id= "image1" src="../images/event2.jpg">
+         <img id= "image1" src="../images/event2.jpg" >
         </div>
 
          <div>
