--- a/html/Front.html
+++ b/html/Front.html
@@ -33,8 +33,8 @@
 
 
       <div  id = "form">
-      <form method = "POST">
-                 <p>Login</p>
+      <form id = "formA" method = "POST">
+                 <p>Event-register</p>
           <div>
               <div class="input">
                  <span> First name:</span>
@@ -52,7 +52,7 @@
              </div>
 
              <div class="input">
-              <input class="inputbutton4"  type = "submit" value = "submit"/>
+              <input class="inputbutton4"  type = "submit" value = "Register"/>
             </div>
           </div>
         
